# seosoyoung

./: .env.example  .gitignore  CLAUDE.md  README.md  ecosystem.config.js  mcp_config.json  mcp_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  seosoyoung.yaml  tmpclaude-7c17-cwd
.claude/rules/: requirements.md  self-modification.md
.docs/: INDEX.md  generate.py
.docs/modules/: api_attachments.md  api_auth.md  api_credentials.md  api_tasks.md  channel_observer_collector.md  channel_observer_intervention.md  channel_observer_observer.md  channel_observer_pipeline.md  channel_observer_plugin.md  channel_observer_prompts.md  channel_observer_scheduler.md  claude_runner.md  (+171 more)
.init/: README.md  install.ps1  install.sh
config/: plugins.yaml  plugins.yaml.example  trello.yaml.example
plugins/: plugins.yaml  translate.yaml.example
scripts/: generate_cogito_manifest.py  install-service.ps1  migrate_om_to_json.py  register-startup.ps1  run-with-env.ps1  setup.ps1  start.ps1  stop.ps1  watchdog.ps1  watchdog_config.template.json  wrapper.ps1  wrapper.py
src/seosoyoung/plugin_sdk/: README.md  __init__.py  caller_info.py  mention.py  plugin.py  pyproject.toml  slack.py  soulstream.py  utterance.py
tests/: conftest.py  test_agent_runner.py  test_async_bridge.py  test_auth_role.py  test_channel_intervention.py  test_channel_message_collector.py  test_channel_observer.py  test_channel_pipeline.py  test_channel_prompts.py  test_channel_scheduler.py  test_channel_store.py  test_cogito_manifest.py  test_cogito_sources.py  test_config.py  test_config_web.py  test_context_builder.py  test_detector.py  test_dm_thread_progress.py  test_embedding_index.py  test_executor.py  test_executor_remote.py  test_file_handler.py  test_formatting.py  test_git_watcher.py  test_glossary.py  test_graceful_deploy.py  test_image_gen.py  test_integration_long_term_memory.py  test_intervention.py  test_list_runner.py  test_lore_search_tools.py  test_main.py  test_markdown_to_mrkdwn.py  test_marker_parser.py  test_mcp_attach.py  test_mcp_e2e.py  test_mcp_integration.py  test_mcp_messaging.py  test_mcp_thread_files.py  test_memory_store.py  (+39 more)
(+531 files in other folders)
