[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seosoyoung-plugin-sdk"
version = "0.1.0"
description = "Plugin SDK for seosoyoung slackbot - interface definitions and backend abstractions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Dorothy", email = "dorothy@eiaserinnys.dev" }
]
keywords = ["slack", "bot", "plugin", "sdk", "seosoyoung"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/eiaserinnys/seosoyoung"
Repository = "https://github.com/eiaserinnys/seosoyoung.git"

[tool.setuptools.packages.find]
where = ["../../.."]
include = ["seosoyoung.plugin_sdk*"]
